motify: swagger AddSinglePersonAndMatch finish
